Fix icons wrap

--- a/themes/hacker/sass/main.scss
+++ b/themes/hacker/sass/main.scss
@@ -306,6 +306,7 @@ hr {
 
 .svg-icons {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   margin-top: 5px;
